# minesweeper

./: Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  minesweeper.py  pyproject.toml  requirements.txt
undetermined/: __init__.py  terminal_client.py  web_client.py  web_components.py
undetermined/assets/: adjectives.txt  animals.txt
undetermined/static/: datastar.js  datastar.js.map  main.css
undetermined/templates/: game.html  index.html
