[project]
name = "minesweeper"
version = "0.1.0"
description = "Cross-platform terminal based minesweeper."
authors = [
    { name = "Chase Sterling", email = "chase.sterling@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "asciimatics~=1.11.0",
    "click~=7.0",
    "setuptools>=78.1.0",
    "z3-solver~=4.8.7",
]
requires-python = ">=3.10"

[project.scripts]
minesweeper = "minesweeper:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

