[project]
name = "undetermined"
version = "0.2.1"
description = "Cross-platform terminal or web based minesweeper."
authors = [
    { name = "Chase Sterling", email = "chase.sterling@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "asciimatics~=1.11.0",
    "brotli-asgi>=1.4.0",
    "click>=7.0",
    "datastar-py>=0.4.4",
    "fastapi>=0.115.12",
    "htpy>=25.3.0",
    "nats-py>=2.10.0",
    "python-multipart>=0.0.20",
    "setuptools>=78.1.0",
    "uvicorn>=0.34.0",
    "z3-solver>=4.8.7",
]
requires-python = ">=3.10"

[project.scripts]
minesweeper = "undetermined.terminal_client:main"

#[tool.uv.sources]
#datastar-py = { git = "https://github.com/starfederation/datastar", subdirectory = "sdk/python"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

